fix(front): #3283 fix people table
Former-commit-id: 3d1b842ef21f2f9309212775a94155ed7b2a37a8

--- a/content/pages/people/index.adoc
+++ b/content/pages/people/index.adoc
@@ -11,7 +11,7 @@ Technology and security is part of our DNA;
 we are always attacking, testing, and developing new applications.
 Meet some of our team:
 
-[role= "tb-ppl"]
+[role= "tb-ppl tc"]
 [cols=3]
 |===
 
