refac(doc): #3329.1 resources-asserts-link
- Asserts link has been added to Resources section.


Former-commit-id: 374bdc59106e5d89ae02aaa7b6ec5d287c422b36

--- a/new/content/pages/resources/index.adoc
+++ b/new/content/pages/resources/index.adoc
@@ -10,7 +10,7 @@
 that allows you to parameterize a pentest
 according to your organization's risk appetite.
 
-== link:[Asserts]
+== link:../asserts/[Asserts]
 
 *Asserts* is an open-source tool
 that looks for deterministic and peripheral vulnerabilities,
