--- a/content/pages/rules/source/167/index.adoc
+++ b/content/pages/rules/source/167/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/167/
 :category: source
 :description: This document contains the details of the security requirements related to the definition and management of source code in the organization. This requirement establishes the importance of closing unused resources to avoid security issues and improve the maintainability of the application.
-:keywords: Security, Requirement, Source, Code, Resources, Unused
+:keywords: Requirement, Source, Code, Resources, Unused, CWE
 :rules: yes
 
 = R167. Close unused resources
@@ -10,3 +10,9 @@
 
 The source code must implement mechanisms
 to ensure the closure of any unused open resource.
+
+== References
+
+. [[r1]] link:https://cwe.mitre.org/data/definitions/404.html[CWE-404: Improper Resource Shutdown or Release]
+The program does not release or incorrectly releases a resource before it is
+made available for re-use.
