feat(doc): #2994.161 add asvs ref to some rules
- Added ASVS reference to R141 and R264


Former-commit-id: b9fd293de239d1173f97af6265cf1f5fceed60c9

--- a/content/pages/rules/credentials/141/index.adoc
+++ b/content/pages/rules/credentials/141/index.adoc
@@ -28,3 +28,9 @@ Verify that the application terminates all other active sessions after a
 successful password change,
 and that this is effective across the application, federated login
 (if present), and any relying parties.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V3.7 Defenses Against Session Management Exploits.(3.7.1)]
+Verify the application ensures a valid login session or requires
+re- authentication or secondary verification before allowing any sensitive
+transactions or account modifications.
