--- a/content/pages/rules/authentication/264/index.adoc
+++ b/content/pages/rules/authentication/264/index.adoc
@@ -54,3 +54,9 @@ Verify that the application uses a single vetted authentication mechanism that
 is known to be secure,
 can be extended to include strong authentication,
 and has sufficient logging and monitoring to detect account abuse or breaches.
+
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V3.7 Defenses Against Session Management Exploits.(3.7.1)]
+Verify the application ensures a valid login session or requires
+re- authentication or secondary verification before allowing any sensitive
+transactions or account modifications.
